--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,20 @@
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="container">
+			<div class="feature">
+				<i class="bi bi-eye-fill icon"> </i>
+				<div class="description">
+					<h3 class="title">Secure Storage</h3>
+					<p class="text">We store hajoijso aojsdo aohd</p>
+				</div>
+				<p class="cta">Este es el cta</p>
+			</div>
+			<div class="icon-desc">
+				<i class="bi bi-eye-fill icon"> </i>
+				<h3 class="title">Create an account</h3>
+			</div>
+		</div>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
