--- a/html/index.html
+++ b/html/index.html
@@ -18,20 +18,33 @@
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
-		<div class="container">
-			<div class="feature">
-				<i class="bi bi-eye-fill icon"> </i>
-				<div class="description">
-					<h3 class="title">Secure Storage</h3>
-					<p class="text">We store hajoijso aojsdo aohd</p>
-				</div>
-				<p class="cta">Este es el cta</p>
+		<nav class="nav">
+			<div class="logo">
+				<a href="#">
+					<img src="/assets/img/logo.png" alt="logo" /></div>
+				</a>				
+			<div class="menu">
+				<ul class="main-menu">
+					<li><a>Prices</a></li>
+					<li><a>Learn</a></li>
+					<li><a>Individuals</a></li>
+					<li><a>Businesses</a></li>
+					<li><a>Developers</a></li>
+					<li><a>Company</a></li>
+				</ul>
 			</div>
-			<div class="icon-desc">
-				<i class="bi bi-eye-fill icon"> </i>
-				<h3 class="title">Create an account</h3>
+			<div class="get-started">
+				<button class="btn-sec-s">Sign in</button>
+				<button class="btn-main-s">Get Started</button>
 			</div>
-		</div>
+		</nav>
+		<section class="sec-home"></section>
+		<section class="sec-call-to-action"></section>
+		<section class="sec-features"></section>
+		<section class="sec-benefits"></section>
+		<section class="sec-kpis"></section>
+		<section class="sec-onboarding"></section>
+		<section class="sec-footer-cta"></section>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
