--- a/html/index.html
+++ b/html/index.html
@@ -25,12 +25,12 @@
 				</a>				
 			<div class="menu">
 				<ul class="main-menu">
-					<li><a>Prices</a></li>
-					<li><a>Learn</a></li>
-					<li><a>Individuals</a></li>
-					<li><a>Businesses</a></li>
-					<li><a>Developers</a></li>
-					<li><a>Company</a></li>
+					<li><a href="#">Prices</a></li>
+					<li><a href="#">Learn</a></li>
+					<li><a href="#">Individuals</a></li>
+					<li><a href="#">Businesses</a></li>
+					<li><a href="#">Developers</a></li>
+					<li><a href="#">Company</a></li>
 				</ul>
 			</div>
 			<div class="get-started">
