--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,21 @@
 				<button class="btn-main-s">Get Started</button>
 			</div>
 		</nav>
-		<section class="sec-home"></section>
+		<section class="sec-home">
+			<div class="home-cta">
+				<span class="cta-text">Jump start your portfolio</span>
+				<i class="bi bi-arrow-right"></i>
+				<h2 class="home-title h1">Jump start crypto portfolio</h2>
+				<p class="home-description">Coinbase is the easiest place to buy and sell cryptocurrency. sign up and get started today</p>
+				<div class="lead-magnet row align-items-center">
+					<div class="col"><input type="text" class="form-control" placeholder="Email addres"></div>
+					<div class="col"><button class="btn-main">Get started</button></div>					
+				</div>
+			</div>			
+			<div class="home-img">
+				<img src="/assets/img/wallet.png" alt="wallet" />
+			</div>
+		</section>
 		<section class="sec-call-to-action"></section>
 		<section class="sec-features"></section>
 		<section class="sec-benefits"></section>
