fixing home-description text

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
 				<span class="cta-text">Jump start your portfolio</span>
 				<i class="bi bi-arrow-right"></i>
 				<h2 class="home-title h1">Jump start crypto portfolio</h2>
-				<p class="home-description">Coinbase is the easiest place to buy and sell cryptocurrency. sign up and get started today</p>
+				<p class="home-description">Coinbase is the easiest place to buy and sell cryptocurrency. sign up and get started today.</p>
 				<div class="lead-magnet row align-items-center">
 					<div class="col"><input type="text" class="form-control" placeholder="Email addres"></div>
 					<div class="col"><button class="btn-main">Get started</button></div>					
